wip commit, index.html

--- a/week1.Rhtml
+++ b/week1.Rhtml
@@ -66,7 +66,7 @@
 </style>                                  <!-- open page header: required -->
     <title>CV-Peng</title>      <!-- page title appears on the tab -->
     
-    <style>   <!-- css style file -->
+    <style>
         
       body{
             font-family: Verdana, sans-serif;
@@ -130,8 +130,8 @@
             <TD style = "line-height: 20%;">
                 <BR><BR><BR><BR><BR><BR><BR><BR>
                 <center><img src="img/CP0.jpg" width=120 height=130>
-                <h3  style="padding-bottom: 0px;"><font color = "white"><br>&nbsp; Cheng Peng, Ph.D.</font></h3>
-                <p0><font color = "lightgray">&nbsp; An Educator, Statistician <br><br><br><br>and Data Scientist</font></p0>
+                <h3  style="padding-bottom: 0px;"><font color = "white"><br>&nbsp; Jacob Martin</font></h3>
+                <p0><font color = "lightgray">&nbsp; Senior Software Engineer</font></p0>
                 <BR><BR><BR><BR><BR>
                 <p0><a href="" style="text-decoration: none;"><font color = "gold">&nbsp;|One-page CV|</font>
                 </a></center></p0> 
@@ -144,22 +144,18 @@
             <TD style = "line-height: 30%;">
                 <h5><font color = "white">&nbsp; Contact</font></h5>
                 <p0><font color = "lightgray">
-                    &nbsp; Department of Mathemtics <br><br><br>
-                    &nbsp; West Chester University<br><br><br>
-                    &nbsp; West Chester, PA 19383<br><br><br>
-                    &nbsp; Phone: <br><br><br>
-                    &nbsp; Fax: <br><br><br>
-                    &nbsp; Email: cpeng@wcupa.edu <br><br><br><br>
+                    &nbsp; 608 Woodhall Drive <br><br><br>
+                    &nbsp; Willow Street, PA 17584<br><br><br>
+                    &nbsp; Phone: 443 944 7264<br><br><br>
+                    &nbsp; Email: jacobwmartin4@gmail.com <br><br><br><br>
                     <!--/font></p0>
                     <!--hr color="gray">
                     <p0><font color = "lightgray"-->
-                    &nbsp; <img src="img/GitHub.jpg" width=10 height=10>&nbsp;  
-                    &nbsp; <a href="https://github.com/pengdsci" style="text-decoration: none;"  target="_blank"  
-                     onclick="window.open('https://github.com/pengdsci','name','width=700, height=500')">
-                     <font color = "lightgray">https://github.com/pengdsci</font></a><br><br>
-                    &nbsp; <img src="img/LinkedInLogo.jpg" width=10 height=10><a href=""></a><br><br>   
-                    &nbsp; <img src="img/X.jpg" width=10 height=10><a href=""></a><br><br>
-                    &nbsp; <img src="img/F.jpg" width=12 height=12><a href=""></a>  
+                    &nbsp; <img src="img/github_logo.png" width=10 height=10>&nbsp;  
+                    &nbsp; <a href="https://github.com/jmartin12" style="text-decoration: none;"  target="_blank"  
+                     onclick="window.open('https://github.com/jmartin12','name','width=700, height=500')">
+                     <font color = "lightgray">https://github.com/jmartin12</font></a><br><br>
+                    &nbsp; <img src="img/linked_in_logo.png" width=10 height=10><a href="https://www.linkedin.com/in/jacob-martin-492537145/"></a><br><br>   
                     </font></p0>
                     <hr color="gray">
             </TD>
